# macro2cfg

./: Cargo.toml  README.md  build.rs
macro2cfg-core/: Cargo.toml
macro2cfg-core/src/: lib.rs
macro2cfg-macros/: Cargo.toml  README.md
macro2cfg-macros/src/: lib.rs
src/: lib.rs
