[package]
name = "macro2cfg-macros"
version = "0.0.1"
edition = "2024"
authors = ["JJ"]
license = "MIT OR Apache-2.0"
description = "GCC, Clang, and MSVC pre-defined macros, converted to Rust's cfg macros."
repository = "https://github.com/JJtheJJpro/macro2cfg"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.110", features=["full"] }
